// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ActiveFilters does not render a tag for fuel type 1`] = `
<div
  class="space-y-1 t-active-filters"
>
  <div
    aria-live="assertive"
    class="sr-only t-filter-announcements"
  />
  <div
    class="flex space-x-2 t-active-filters-summary"
  >
    <div
      class="text-gray-800"
    >
      {count} active filters
    </div>
    <div
      class="lg:hidden"
    >
      <a
        class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
        href="?language=en&p=1"
        title="Clear all"
      >
        Clear all
      </a>
    </div>
  </div>
  <div
    class="flex flex-wrap gap-4 t-active-filters-items"
  />
</div>
`;

exports[`ActiveFilters renders multiple station-type tags 1`] = `
<div
  class="space-y-1 t-active-filters"
>
  <div
    aria-live="assertive"
    class="sr-only t-filter-announcements"
  />
  <div
    class="flex space-x-2 t-active-filters-summary"
  >
    <div
      class="text-gray-800"
    >
      {count} active filters
    </div>
    <div
      class="lg:hidden"
    >
      <a
        class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
        href="?language=en&p=1"
        title="Clear all"
      >
        Clear all
      </a>
    </div>
  </div>
  <div
    class="flex flex-wrap gap-4 t-active-filters-items"
  >
    <div
      class="inline-block px-4 py-1 border rounded t-active-filters-item border-slate-400 shadow-bottom-gray"
      data-testid="filter-tag"
    >
      <div
        class="flex items-center space-x-2 text-pink-800 text-xs"
      >
        <div>
          Motorway stations
        </div>
        <a
          aria-label="Remove filter "{name}""
          class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
          data-testid="remove-filter"
          href="?language=en&supermarket=true&open24h=true&p=1"
          title="Remove filter "{name}""
        >
          <svgr-mock />
        </a>
      </div>
    </div>
    <div
      class="inline-block px-4 py-1 border rounded t-active-filters-item border-slate-400 shadow-bottom-gray"
      data-testid="filter-tag"
    >
      <div
        class="flex items-center space-x-2 text-pink-800 text-xs"
      >
        <div>
          Supermarket stations
        </div>
        <a
          aria-label="Remove filter "{name}""
          class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
          data-testid="remove-filter"
          href="?language=en&motorway=true&open24h=true&p=1"
          title="Remove filter "{name}""
        >
          <svgr-mock />
        </a>
      </div>
    </div>
    <div
      class="inline-block px-4 py-1 border rounded t-active-filters-item border-slate-400 shadow-bottom-gray"
      data-testid="filter-tag"
    >
      <div
        class="flex items-center space-x-2 text-pink-800 text-xs"
      >
        <div>
          Open 24 hours
        </div>
        <a
          aria-label="Remove filter "{name}""
          class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
          data-testid="remove-filter"
          href="?language=en&supermarket=true&motorway=true&p=1"
          title="Remove filter "{name}""
        >
          <svgr-mock />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActiveFilters renders only amenity tags when fuel type and amenities are set 1`] = `
<div
  class="space-y-1 t-active-filters"
>
  <div
    aria-live="assertive"
    class="sr-only t-filter-announcements"
  />
  <div
    class="flex space-x-2 t-active-filters-summary"
  >
    <div
      class="text-gray-800"
    >
      {count} active filters
    </div>
    <div
      class="lg:hidden"
    >
      <a
        class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
        href="?language=en&p=1"
        title="Clear all"
      >
        Clear all
      </a>
    </div>
  </div>
  <div
    class="flex flex-wrap gap-4 t-active-filters-items"
  >
    <div
      class="inline-block px-4 py-1 border rounded t-active-filters-item border-slate-400 shadow-bottom-gray"
      data-testid="filter-tag"
    >
      <div
        class="flex items-center space-x-2 text-pink-800 text-xs"
      >
        <div>
          Supermarket stations
        </div>
        <a
          aria-label="Remove filter "{name}""
          class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
          data-testid="remove-filter"
          href="?language=en&fuelType=B7_STANDARD&toilets=true&p=1"
          title="Remove filter "{name}""
        >
          <svgr-mock />
        </a>
      </div>
    </div>
    <div
      class="inline-block px-4 py-1 border rounded t-active-filters-item border-slate-400 shadow-bottom-gray"
      data-testid="filter-tag"
    >
      <div
        class="flex items-center space-x-2 text-pink-800 text-xs"
      >
        <div>
          Toilets
        </div>
        <a
          aria-label="Remove filter "{name}""
          class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
          data-testid="remove-filter"
          href="?language=en&fuelType=B7_STANDARD&supermarket=true&p=1"
          title="Remove filter "{name}""
        >
          <svgr-mock />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActiveFilters renders zero active filters with an empty query 1`] = `
<div
  class="space-y-1 t-active-filters"
>
  <div
    aria-live="assertive"
    class="sr-only t-filter-announcements"
  />
  <div
    class="flex space-x-2 t-active-filters-summary"
  >
    <div
      class="text-gray-800"
    >
      {count} active filters
    </div>
    <div
      class="lg:hidden"
    >
      <a
        class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
        href="?language=en&p=1"
        title="Clear all"
      >
        Clear all
      </a>
    </div>
  </div>
  <div
    class="flex flex-wrap gap-4 t-active-filters-items"
  />
</div>
`;
